--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ p{
 
 button {
   text-align: center;
-  margin: 0 30% 0 30%;
+  margin: 0 auto;
+  display: block;
   padding: 20px;
   background-color: #ffc044;
   color: white;
